--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -172,26 +172,30 @@
                     </aside>
                     <figure class="container">
                         <figcaption>About the book</figcaption>
-                        <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
-                            could not be higher—for their world or ours.</p>
-                        <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
-                        <br />
-                        <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
-                        <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
-                            (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
+                        <div>
+                            <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
+                                could not be higher—for their world or ours.</p>
+                            <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
+                            <br />
+                            <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                            <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed
+                                statues (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
+                        </div>
                     </figure>
                 </article>
 
                 <figure class="container">
                     <figcaption>About the book</figcaption>
-                    <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes could
-                        not be higher—for their world or ours.</p>
-                    <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.
-                    </p><br />
-                    <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
-                    <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
-                        (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
+                    <div>
+                        <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
+                            could not be higher—for their world or ours.</p>
+                        <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.
+                        </p><br />
+                        <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                        <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
+                            (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
                 </figure>
+                </div>
 
                 <aside class="buyLinks">
                     <select id="bottomSelect">
@@ -235,11 +239,13 @@
                     <div class="tab-content" id="tabContent">
 
                         <div class="tab-pane fade active show" id="synopsis" role="tabpanel" aria-labelledby="aboutBookButton">
-                            <p>Charlie Reade looks like a regular high school kid, great at baseball and football, a decent student. But he carries a heavy load. His mom was killed in a hit-and-run accident when he was seven, and grief drove his dad to drink.
-                                Charlie learned how to take care of himself—and his dad. When Charlie is seventeen, he meets a dog named Radar and her aging master, Howard Bowditch, a recluse in a big house at the top of a big hill, with a locked shed
-                                in the backyard. Sometimes strange sounds emerge from it.</p>
-                            <p>Charlie starts doing jobs for Mr. Bowditch and loses his heart to Radar. Then, when Bowditch dies, he leaves Charlie a cassette tape telling a story no one would believe. What Bowditch knows, and has kept secret all his long
-                                life, is that inside the shed is a portal to another world.</p>
+                            <div class="inset-Readable">
+                                <p>Charlie Reade looks like a regular high school kid, great at baseball and football, a decent student. But he carries a heavy load. His mom was killed in a hit-and-run accident when he was seven, and grief drove his dad
+                                    to drink. Charlie learned how to take care of himself—and his dad. When Charlie is seventeen, he meets a dog named Radar and her aging master, Howard Bowditch, a recluse in a big house at the top of a big hill, with
+                                    a locked shed in the backyard. Sometimes strange sounds emerge from it.</p>
+                                <p>Charlie starts doing jobs for Mr. Bowditch and loses his heart to Radar. Then, when Bowditch dies, he leaves Charlie a cassette tape telling a story no one would believe. What Bowditch knows, and has kept secret all his
+                                    long life, is that inside the shed is a portal to another world.</p>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="mediaReactions" role="tabpanel" aria-labelledby="mediaReactionsButton">
 
@@ -264,19 +270,25 @@
                         </div>
                         <div class="tab-pane fade" id="productDetails" role="tabpanel" aria-labelledby="productDetailsButton">
                             <div>
-                                <p>Publisher: Scribner </p>
-                                <p>Publish Date: September 6, 2022</p>
-                                <p>Rating: <span id="rating"></span></p>
-                                <p>Length: 608 pages</p>
-                                <p>Available Format(s): Hardcover / eBook</p>
+                                <div class="inset-Readable">
+
+                                    <p>Publisher: Scribner </p>
+                                    <p>Publish Date: September 6, 2022</p>
+                                    <p>Rating: <span id="rating"></span></p>
+                                    <p>Length: 608 pages</p>
+                                    <p>Available Format(s): Hardcover / eBook</p>
+                                </div>
                             </div>
                             <div>
-                                <p>ISBN-13: 9781668002179</p>
-                                <p>ISBN-10: 1668002175</p>
-                                <p>Language: English</p>
+                                <div class="inset-Readable">
 
-                                <p> Item weight: Hardcover(816g) </p>
-                                <p> Dimensions: 15.56 x 4.83 x 23.5 cm </p>
+                                    <p>ISBN-13: 9781668002179</p>
+                                    <p>ISBN-10: 1668002175</p>
+                                    <p>Language: English</p>
+
+                                    <p> Item weight: Hardcover(816g) </p>
+                                    <p> Dimensions: 15.56 x 4.83 x 23.5 cm </p>
+                                </div>
                             </div>
                         </div>
                         <div class="tab-pane fade" id="authorInformation" role="tabpanel" aria-labelledby="authorButton">
@@ -327,7 +339,7 @@
                                 <p><b>Website:</b> <a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
                                 <div>
                                     <h5><u>genres:</u></h5>
-                                    <ul>
+                                    <ul class="inset-Readable">
                                         <li>Horror</li>
                                         <li>Mystery</li>
                                         <li>Literature</li>
@@ -336,7 +348,7 @@
                                 </div>
                                 <div>
                                     <h5><u>Influences</u> </h5>
-                                    <ul>
+                                    <ul class="inset-Readable">
                                         <li>Robert Bloch,</li>
                                         <li>Ray Bradbury,</li>
                                         <li>Charles Dickens,</li>
