--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -378,7 +378,7 @@
                 <div class="accordion" id="bottomSection">
                     <section id="reviewsInfo" class="accordion-item">
                         <h2 class="accordion-header" id="reviewsButton">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews">reviews</button>
+                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews"><div>reviews</div></button>
                         </h2>
                         <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
                             <div class="accordion-body">
