--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -378,9 +378,9 @@
                 <div class="accordion" id="bottomSection">
                     <section id="reviewsInfo" class="accordion-item">
                         <h2 class="accordion-header" id="reviewsButton">
-                            <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews"><div>reviews</div></button>
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews"><div>reviews</div></button>
                         </h2>
-                        <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
+                        <div id="reviews" class="accordion-collapse collapsed" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
                             <div class="accordion-body">
                                 <div id="output">
                                     <div class="accordion container" id="innerAcordion">
