--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -349,13 +349,13 @@
                                 <div>
                                     <h5><u>Influences</u> </h5>
                                     <ul class="inset-Readable">
-                                        <li>Robert Bloch,</li>
-                                        <li>Ray Bradbury,</li>
-                                        <li>Charles Dickens,</li>
-                                        <li>Shirley Jackson,</li>
-                                        <li>H.P. Lovecraft,</li>
-                                        <li>John D. MacDonald,</li>
-                                        <li>Richard Matheson,</li>
+                                        <li>Robert Bloch</li>
+                                        <li>Ray Bradbury</li>
+                                        <li>Charles Dickens</li>
+                                        <li>Shirley Jackson</li>
+                                        <li>H.P. Lovecraft</li>
+                                        <li>John D. MacDonald</li>
+                                        <li>Richard Matheson</li>
                                         <li>J.R.R. Tolkien</li>
                                     </ul>
                                 </div>
