--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -335,8 +335,8 @@
 
                             </section>
                             <section>
-                                <p><b>Born in:</b> Portland, Maine, USA</p>
-                                <p><b>Website:</b> <a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
+                                <p><span><b>Born in:</b> Portland, Maine, USA</span></p>
+                                <p><a href="http://www.stephenking.com">http://www.stephenking.com</a></p>
                                 <div>
                                     <h5><u>genres:</u></h5>
                                     <ul class="inset-Readable">
