--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -21,6 +21,12 @@
     <!-- Bootstrap CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
+    <!-- Google Fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Akaya+Telivigala&family=Allura&family=Handlee&family=Henny+Penny&family=Josefin+Sans&family=Kaushan+Script&family=Oleo+Script&family=WindSong:wght@500&display=swap" rel="stylesheet">
+
+
     <link rel="stylesheet" href="css/main.css">
 
 
@@ -145,7 +151,7 @@
 
                 <article>
                     <div>
-                        <h2>Fairy Tale</h2>
+                        <h2>FAIRY <span class="titleSpan">TALE</span></h2>
                         <h4>By: <a href="https://stephenking.com">Stephen King</a></h4>
                         <h4>MSRP: $32.50</h4>
                     </div>
