reviews styles/functionality
added a 3rd api privider for a primary fallback
added a loading spinner to indicate the fetch is taking place.
styled the reviews to match the rest of the page
changed global nav font color

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -76,7 +76,7 @@
     <main>
         <!-- turn into bootstrap tabs-->
         <nav class="navbar navbar-expand-sm navbar-light .bg-transparent sticky-top">
-            <ul class="navbar-nav ms-5 me-5 me-md-5 me-sm-2 ms-sm-2 ">
+            <ul class="navbar-nav ms-3 me-2">
                 <li class="nav-item  me-md-3 ">
                     <a class="nav-link" href="#top">Top</a>
                 </li>
@@ -368,7 +368,6 @@
                             </section>
                             <section>
                                 <div class="accordion container" id="authorAcordion">
-
                                 </div>
                             </section>
                         </div>
@@ -379,14 +378,12 @@
 
             </section>
             <section id="reviews">
-
-
                 <div class="accordion" id="bottomSection">
                     <section id="reviewsInfo" class="accordion-item">
                         <h2 class="accordion-header" id="reviewsButton">
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews"><div>reviews</div></button>
                         </h2>
-                        <div id="reviews" class="accordion-collapse collapsed" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
+                        <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
                             <div class="accordion-body">
                                 <div id="output">
                                     <div class="accordion container" id="innerAcordion">
