updating for mailchimp for another class

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -33,6 +33,10 @@
 
 
     <meta name="theme-color" content="#fafafa">
+
+<!-- This code is for an assignment in a different class-->
+<script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/9d60f189d8f7980acd9b0c075/38a90277c5c6c35af854a2d58.js");</script>
+
 </head>
 
 <body>
