HTLM/CSS validation changes
ran both through W3C validator and made required changes

--- a/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/assignment2/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Assignment2-KyleDuffy</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -37,10 +37,10 @@
     <!-- Header Content -->
     <header>
         <nav class="navbar navbar-expand-md navbar-light bg-transparent">
-            <a class="navbar-brand" href="#"><img src="./img/logo.svg" /></a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#globalNav" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
+            <a class="navbar-brand" href="#"><img src="./img/logo.svg" alt=""></a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#globalNav" aria-controls="globalNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <div class="break"></div>
             <div class="collapse navbar-collapse ms-auto" id="globalNav">
                 <ul class="navbar-nav ms-auto ">
@@ -147,18 +147,16 @@
                 <article>
                     <!-- title-->
                     <div>
-                        <h2>FAIRY
-                            <p class="titleSpan">TALE</p>
-                        </h2>
+                        <h2>FAIRY <span class="titleSpan">T</span>ALE</h2>
                         <h4>By: <a href="https://stephenking.com">Stephen King</a></h4>
                         <h4>MSRP: $32.50</h4>
                     </div>
                     <!--Buy Links-->
                     <aside class="buyLinks">
                         <select id="topSelect">
-                         <option value="hardCover">Hard Cover</option>
-                    <option value="ebook">E-book</option>
-                      </select>
+                            <option value="hardCover">Hard Cover</option>
+                            <option value="ebook">E-book</option>
+                        </select>
                         <section id="hardCover">
                             <a href="https://www.amazon.com/exec/obidos/ASIN/1668002175?tag=simonsayscom"><img src="./img/svg/Amazonlogo.svg" alt=""></a>
                             <a href="https://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002179"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
@@ -167,8 +165,8 @@
                             <a href="https://www.indiebound.org/book/9781668002179?aff=simonsayscom"><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
                         </section>
                         <section id="ebook">
-                            <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="./img/svg/Amazon Kindle logo.svg"></a>
-                            <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg"></a>
+                            <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="AmazonKindleLogo.svg" alt="Amazon Kindle Logo"></a>
+                            <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg" alt=""></a>
                             <a href="http://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002186"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
                             <a href="http://www.booksamillion.com/p/9781668002186"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
                             <a href="https://play.google.com/store/search?q=9781668002186&c=books&PCamRefID=fairytale_9781668002186_sscom&PAffiliateId=110l3H"><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
@@ -182,8 +180,9 @@
                             <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
                                 could not be higher—for their world or ours.</p>
                             <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.</p>
-                            <br />
-                            <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                            <br>
+                            <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”
+                            </p>
                             <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed
                                 statues (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
                         </div>
@@ -196,29 +195,31 @@
                         <p>Legendary storyteller Stephen King goes into the deepest well of his imagination in this spellbinding novel about a seventeen-year-old boy who inherits the keys to a parallel world where good and evil are at war, and the stakes
                             could not be higher—for their world or ours.</p>
                         <p>King’s storytelling in Fairy Tale soars. This is a magnificent and terrifying tale about another world than ours, in which good is pitted against overwhelming evil, and a heroic boy – and his dog – must lead the battle.
-                        </p><br />
-                        <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”</p>
+                        </p><br>
+                        <p>Early in the Pandemic, King asked himself: “What could you write that would make you happy?”
+                        </p>
                         <p>“As if my imagination had been waiting for the question to be asked, I saw a vast deserted city—deserted but alive. I saw the empty streets, the haunted buildings, a gargoyle head lying overturned in the street. I saw smashed statues
                             (of what I didn’t know, but I eventually found out). I saw a huge, sprawling palace with glass towers so high their tips pierced the clouds. Those images released the story I wanted to tell.”</p>
+
+                    </div>
                 </figure>
-                </div>
                 <!-- Hidden Buy Links aside for smaller screen sizes-->
                 <aside class="buyLinks">
                     <select id="bottomSelect">
-                       
-                         <option value="hardCover" >Hard Cover</option>
-                   <option value="ebook">E-book</option>
-                      </select>
-                    <section id="hardCover">
+
+                        <option value="hardCover">Hard Cover</option>
+                        <option value="ebook">E-book</option>
+                    </select>
+                    <section id="hardCover1">
                         <a href="https://www.amazon.com/exec/obidos/ASIN/1668002175?tag=simonsayscom"><img src="./img/svg/Amazonlogo.svg" alt=""></a>
                         <a href="https://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002179"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
                         <a href="https://www.booksamillion.com/p/9781668002179"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
                         <a href="https://bookshop.org/a/1688/9781668002179"><img src="./img/svg/Bookshoplogo.svg" alt=""></a>
                         <a href="https://www.indiebound.org/book/9781668002179?aff=simonsayscom"><img src="./img/svg/IndieBoundlogo.svg" alt=""></a>
                     </section>
-                    <section id="ebook">
-                        <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="./img/svg/Amazon Kindle logo.svg"></a>
-                        <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg"></a>
+                    <section id="ebook1">
+                        <a href="http://www.amazon.com/gp/product/B09QXZB6SK?ie=UTF8&camp=1789&creativeASIN=B09QXZB6SK&linkCode=xm2&tag=simonsayscom"><img src="./img/svg/AmazonKindleLogo.svg" alt="Amazon Kingle Logo"></a>
+                        <a href="http://books.apple.com/us/book/isbn9781668002186?at=101rBC&ct=fairytale_9781668002186_sscom"><img src="./img/svg/AppleBookslogo.svg" alt=""></a>
                         <a href="http://www.anrdoezrs.net/click-7567305-11819508?SID=simonsayscom&url=http://www.barnesandnoble.com/w/?ean=9781668002186"><img src="./img/svg/BarnesandNoblelogo.svg" alt=""></a>
                         <a href="http://www.booksamillion.com/p/9781668002186"><img src="./img/svg/BooksaMillionlogo.svg" alt=""></a>
                         <a href="https://play.google.com/store/search?q=9781668002186&c=books&PCamRefID=fairytale_9781668002186_sscom&PAffiliateId=110l3H"><img src="./img/svg/GooglePlaylogo.svg" alt=""></a>
@@ -233,7 +234,7 @@
                     <nav>
                         <div class="nav nav-tabs nav-justified" id="nav-tab" role="tablist">
 
-                            <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#synopsis" type="button" role="tab" aria-controls="aboutBook" aria-selected="true">Synopsis</button>
+                            <button class="nav-link active" id="aboutBookButton" data-bs-toggle="pill" data-bs-target="#synopsis" type="button" role="tab" aria-controls="synopsis" aria-selected="true">Synopsis</button>
 
                             <button class="nav-link" id="mediaReactionsButton" data-bs-toggle="pill" data-bs-target="#mediaReactions" type="button" role="tab" aria-controls="mediaReactions" aria-selected="false">Media Reactions</button>
 
@@ -320,13 +321,13 @@
                                         </div>
                                     </div>
                                     <button class="carousel-control-prev" type="button" data-bs-target="#authorCarousel" data-bs-slide="prev">
-                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Previous</span>
-                                  </button>
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
                                     <button class="carousel-control-next" type="button" data-bs-target="#authorCarousel" data-bs-slide="next">
-                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                    <span class="visually-hidden">Next</span>
-                                  </button>
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
                                 </div>
                             </section>
                             <section>
@@ -366,11 +367,13 @@
             </section>
 
             <!-- Reviews section-->
-            <section id="reviews">
+            <section id="reviewsSection">
                 <div class="accordion" id="bottomSection">
                     <section id="reviewsInfo" class="accordion-item">
                         <h2 class="accordion-header" id="reviewsButton">
-                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews"><div>reviews</div></button>
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#reviews" aria-expanded="true" aria-controls="reviews">
+                                reviews
+                            </button>
                         </h2>
                         <div id="reviews" class="accordion-collapse collapse" aria-labelledby="reviewsButton" data-bs-parent="#bottomSection">
                             <div class="accordion-body">
