--- a/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
+++ b/F22/Advanced-Interface-using-CSS-COMP2081/Week11/pie-graph.html
@@ -9,6 +9,12 @@
 
 <body>
     <!-- STEP 1: Create SVG element -->
+    <svg viewbox="0 0 400 400"> 
+   <circle cx="200" cy="200" r="200" fill="#ccc" />
+   <circle cx="200" cy="200" r="200" fill="#ccc" />
+
+
+ 
 
     <!-- STEP 2: Create main circle for pie graph -->
 
@@ -21,7 +27,7 @@
 
 
     <!-- STEP 10: Connect the JavaScript to the HTML, then proceed to js/charts.js for the next step -->
-
+   </svg>
 
     <!-- Thank you to https://mirellavanteulingen.nl/blog/svg-charts-animations.html for the inspiration for this lesson -->
 </body>
